# HW_web_07

./: README.md  config.ini  main.py  my_select.py  pyproject.toml  seed.py
alembic/versions/: 4ac75d1f3f60_init.py
conf/: db.py  models.py
