[tool.poetry]
name = "hw-web-07"
version = "0.1.0"
description = ""
authors = ["SvitLanaTy <stymchenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
faker = "^23.3.0"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
